# debugging_talk

./: CMakeLists.txt  main.cpp  tests.cpp  tests.h
debugging/: 3  GDB Documentation.desktop  Makefile  bubble_sort.cpp  functions.c  notes  segfault.cpp  test_bad_args.c
examples/: bubble_sort_iterative.cpp  bubble_sort_recursive.cpp  functions.h  graph_dft_stack.cpp  insertion_sort_recursive.cpp  segfault.h  test_inclusion.c  test_working_loop.c  test_working_loop.c.save
multiprocess/: bakery.c  bakery.h  child.c  child.h  circular_queue.c  circular_queue.h  globals.c  globals.h  grandchild.c  grandchild.h  parent.c  parent.h
resources/: Makefile  Tests.mak  slides.odp
